--- a/Projects/mU/mU.vcproj
+++ b/Projects/mU/mU.vcproj
@@ -41,7 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="MU_EXPORTS"
+				AdditionalIncludeDirectories="..\..\Include"
+				PreprocessorDefinitions="MU_EXPORTS;KERNEL_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -61,6 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -115,7 +117,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="MU_EXPORTS"
+				AdditionalIncludeDirectories="..\..\Include"
+				PreprocessorDefinitions="MU_EXPORTS;KERNEL_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -134,6 +137,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -160,7 +164,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy $(OutDir)\$(ProjectName).lib $(SolutionDir)\..\Lib\&#x0D;&#x0A;copy $(OutDir)\$(ProjectName).exe $(SolutionDir)\..\&#x0D;&#x0A;"
+				CommandLine="copy $(OutDir)\$(ProjectName).lib $(SolutionDir)\..\Lib\Kernel.lib&#x0D;&#x0A;copy $(OutDir)\$(ProjectName).exe $(SolutionDir)\..\&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
@@ -214,6 +218,10 @@
 			</File>
 			<File
 				RelativePath="..\..\Kernel\initialize.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Kernel\Interface.cpp"
 				>
 			</File>
 			<File
