--- a/mU.ini
+++ b/mU.ini
@@ -2,12 +2,18 @@ Begin["System`"]
 $Package=Path["Package/"]
 
 Do[Install[StringJoin[$Package,i,".dll"]],{i,
-{"Differential","Function","Graphics","NumberTheory","Polynomial","Stream","Matrix"}}]
+{"Function","Graphics","NumberTheory","Stream","Matrix"}}]
 
-Do[Get[StringJoin[$Package,i,".u"]],{i,
-{"Integration/Integrate","Summation/Sum","TeX/TeX"}}]
+Do[Get[StringJoin[$Package,i,"/init.m"]],{i,
+{"Polynomial","Summation","Product","Differential","Integration","TeX"}}]
 
 {\[Infinity],\[Pi],\[ExponentialE],\[ImaginaryI]} = {Infinity,Pi,E,I}
+Simplify[x_] := Expand[x]
+FullSimplify[x_]:=Simplify[x]
+mU := True
+PossibleZeroQ[x_] := Simplify[x] == 0
+ZeroQ[x_] := PossibleZeroQ[x]
+
 End[]
 (*
 simpson[f_, a_, b_, n_] := 
